# fastapi

./: a.json  data.txt  day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day7_1.py  day7_2.py  day7_3_todos.py  day7_4_mediapipe.py  day7_5.py  day8_1_main.py  day8_2_login.py  main.py  pyproject.toml  requirements.txt  test.docx
my_ChromaDB/: chroma.sqlite3
my_Chroma_IU/: chroma.sqlite3
my_chroma_player/: chroma.sqlite3
static/: style.css
templates/: index.html
